--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,5 +1,3 @@
-@import './variables.css';
-
 .header {
     background-color: var(--color-white);
     color: var(--color-primary);
@@ -160,5 +158,44 @@
 
     .searchInput {
         max-width: 100%;
+    }
+}
+
+.mobileMenuBtn {
+    display: none;
+    background: transparent;
+    border: none;
+    color: var(--color-primary);
+    cursor: pointer;
+    border: 1px solid;
+    border-radius: 2px;
+}
+
+.mobileNav {
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--color-white);
+    padding: 1rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 99;
+}
+
+.mobileNav:global(.show) {
+    display: flex;
+}
+
+@media (max-width: 768px) {
+    .nav {
+        display: none;
+    }
+
+    .mobileMenuBtn {
+        display: flex;
+        align-items: center;
     }
 }
