--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -63,11 +63,6 @@
   color: #fff;
 }
 
-/* ===================== */
-/* 📱 Responsive Styles */
-/* ===================== */
-
-/* For tablets */
 @media (max-width: 1024px) {
   .heading {
     font-size: 2.2rem;
@@ -78,11 +73,9 @@
   }
 }
 
-/* For mobile devices */
 @media (max-width: 768px) {
   .hero {
-    height: calc(100vh - 100px);
-    /* adjust for smaller headers */
+    height: auto;
   }
 
   .heroContainer {
@@ -104,10 +97,9 @@
   }
 }
 
-/* For very small screens */
 @media (max-width: 480px) {
   .hero {
-    height: calc(60vh - 80px);
+    height: auto;
   }
 
   .heading {
@@ -118,7 +110,6 @@
     font-size: 0.9rem;
   }
 }
-
 
 .sectionTitle {
   font-size: 2rem;
