--- a/styles/ProductCard.module.css
+++ b/styles/ProductCard.module.css
@@ -94,8 +94,4 @@
     .productPrice {
         font-size: 0.9rem;
     }
-
-    .imageWrapper {
-        height: 150px;
-    }
 }
