--- a/styles/ProductDetail.module.css
+++ b/styles/ProductDetail.module.css
@@ -105,4 +105,8 @@
     .right {
         flex: 1 1 100%;
     }
+
+    .imageWrapper {
+        max-width: 100%;
+    }
 }
